--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 					</li>
 
 					<li class="nav-item"> 
-						<a href="#" class="nav-link">À propos</a>
+						<a href="#pourquoi" class="nav-link">À propos</a>
 					</li>
 
 					<li class="nav-item"> 
-						<a href="#" class="nav-link">Les Auteurs</a>
+						<a href="#auteur" class="nav-link">Les Auteurs</a>
 					</li>
 
 					<li class="nav-item"> 
-						<a href="#" class="nav-link">Contact</a>
+						<a href="#ecrire" class="nav-link">Contact</a>
 					</li>
 					
 				</ul>
@@ -114,7 +114,7 @@
 				</div>
 			</div>
 
-			<div class="jumbotron text-center justify-content-center pt-5 bg"> <!-- jumbutron -->
+			<div class="jumbotron text-center justify-content-center pt-5 bg" id="pourquoi"> <!-- jumbutron -->
 				<div class="row">
 					<div class="col-12">
 						<div class="text-center justify-content-center pb-1">
@@ -181,7 +181,7 @@
 				</div>			
 			</div> <!-- end jumbutron -->
 			
-			<div class="pb-5 bg-white">
+			<div class="pb-5 bg-white" id="auteur">
 				<div class="text-center">
 					<h2>Les auteurs</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br/> Iste iure, veniam eum vel assumenda! Est ducimus ab excepturi.</p>
@@ -291,7 +291,7 @@
 				<div class="container">
 					<div class="row">
 						
-						<div class="col-lg-6 col-md-12">
+						<div class="col-lg-6 col-md-12" id="ecrire">
 
 							<h3>Nous écrire</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
